--- a/login.html
+++ b/login.html
@@ -23,6 +23,8 @@ button:hover {background: #2563eb;}
 <script>
 function login(){
   
+  let username = document.getElementById('username').value;
+  let password = document.getElementById('password').value;
 }
 </script>
 </body>
