--- a/home.html
+++ b/home.html
@@ -2,61 +2,182 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Available Rooms - Space Booking</title>
+  <title>Available Rooms</title>
   <style>
-    body { font-family: Arial; background: #f1f5f9; padding: 20px; }
-    h1 { text-align: center; color: #1e293b; }
-    .room-list { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
-    .room-card { background: #fff; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    .room-card h2 { margin: 0; font-size: 20px; color: #1d4ed8; }
-    .room-card p { margin: 5px 0; color: #334155; }
-    .equipment { margin-top: 10px; font-size: 14px; }
-    .book-btn {
-      margin-top: 10px; padding: 8px 15px; background: #10b981; color: #fff; 
-      border: none; border-radius: 5px; cursor: pointer;
+    * {
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
     }
-    .book-btn:hover { background: #059669; }
+
+    body {
+      margin: 0;
+      padding: 40px;
+      background-color: #f1f5f9;
+    }
+
+    h1 {
+      text-align: center;
+      color: #1d4ed8;
+    }
+
+    .room-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+      padding: 0 20px;
+    }
+
+    .room-card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+
+    .room-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .room-card h3 {
+      margin-top: 0;
+      color: #111827;
+    }
+
+    .room-card p {
+      margin: 6px 0;
+      color: #4b5563;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 14px;
+      border: none;
+      border-radius: 6px;
+      font-weight: 500;
+      cursor: pointer;
+    }
+
+    .btn.details {
+      background-color: #facc15;
+      color: #1e293b;
+    }
+
+    .btn.book {
+      background-color: #2563eb;
+      color: white;
+      margin-left: 10px;
+    }
+
+    .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      width: 90%;
+      max-width: 400px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      z-index: 1000;
+    }
+
+    .popup h3 {
+      margin-top: 0;
+    }
+
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 999;
+    }
+
+    .close-btn {
+      margin-top: 15px;
+      background-color: #e11d48;
+      color: white;
+    }
   </style>
 </head>
 <body>
 
 <h1>Available Rooms</h1>
-<div class="room-list" id="roomList"></div>
+
+<div class="room-list" id="roomList">
+  <!-- Rooms will be loaded here by JS -->
+</div>
+
+<!-- Popup Modal -->
+<div class="overlay" id="overlay" onclick="closePopup()"></div>
+<div class="popup" id="roomPopup">
+  <h3 id="popupTitle">Room Details</h3>
+  <p id="popupInfo"></p>
+  <button class="btn close-btn" onclick="closePopup()">Close</button>
+</div>
 
 <script>
-fetch('get_rooms.php')
-  .then(res => res.json())
-  .then(data => {
+    //Replace the rooms[] array with a PHP-generated JSON from your database.
+  const rooms = [
+    {
+      id: 1,
+      name: "Lab A1",
+      type: "Computer Lab",
+      size: 40,
+      description: "Equipped with 40 PCs, whiteboard, projector.",
+    },
+    {
+      id: 2,
+      name: "Lecture Hall B",
+      type: "Lecture Room",
+      size: 80,
+      description: "Spacious hall with audio system and projector.",
+    },
+    {
+      id: 3,
+      name: "Lab C2",
+      type: "Engineering Lab",
+      size: 25,
+      description: "Contains 25 workstations and safety equipment.",
+    }
+  ];
+
+  function loadRooms() {
     const container = document.getElementById('roomList');
-
-    data.forEach(room => {
-      const div = document.createElement('div');
-      div.className = 'room-card';
-
-      div.innerHTML = `
-        <h2>${room.room_name}</h2>
+    rooms.forEach(room => {
+      const card = document.createElement('div');
+      card.className = 'room-card';
+      card.innerHTML = `
+        <h3>${room.name}</h3>
         <p><strong>Type:</strong> ${room.type}</p>
-        <p><strong>Size:</strong> ${room.size}</p>
-        <p><strong>Condition:</strong> ${room.room_condition || 'Good'}</p>
-        <div class="equipment">
-          <strong>Equipment:</strong><br>
-          ${
-            room.equipments.length > 0 ?
-            room.equipments.map(eq => `- ${eq.equipment_name} (x${eq.quantity}) [${eq.condition == 1 ? 'Working' : 'Faulty'}]`).join('<br>')
-            : 'None'
-          }
-        </div>
-        <button class="book-btn" onclick="bookRoom(${room.room_id}, '${room.room_name}')">Book This Room</button>
+        <p><strong>Size:</strong> ${room.size} pax</p>
+        <button class="btn details" onclick="showDetails(${room.id})">View Details</button>
+        <a href="booking.html?roomId=${room.id}" class="btn book">Book</a>
       `;
-
-      container.appendChild(div);
+      container.appendChild(card);
     });
-  });
+  }
 
-function bookRoom(roomId, roomName) {
-  // Redirect to booking page with room info
-  window.location.href = `booking.html?room_id=${roomId}&room_name=${encodeURIComponent(roomName)}`;
-}
+  function showDetails(id) {
+    const room = rooms.find(r => r.id === id);
+    document.getElementById('popupTitle').textContent = room.name + " Details";
+    document.getElementById('popupInfo').textContent = room.description;
+    document.getElementById('overlay').style.display = 'block';
+    document.getElementById('roomPopup').style.display = 'block';
+  }
+
+  function closePopup() {
+    document.getElementById('overlay').style.display = 'none';
+    document.getElementById('roomPopup').style.display = 'none';
+  }
+
+  loadRooms();
 </script>
 
 </body>
