--- a/booking.html
+++ b/booking.html
@@ -94,11 +94,8 @@
 <body>
   <div class="booking-container">
     <h1>Book a Room</h1>
-    <form id="bookingForm" onsubmit="submitBooking(event)">
-      <div class="form-group">
-        <label for="roomId">Room ID</label>
-        <input type="number" id="roomId" name="roomId" required />
-      </div>
+    <form id="bookingForm" method="POST" action="submit-booking.php"> <!-- submit-booking.php -->
+      <input type="hidden" name="room_id" value="<?php echo htmlspecialchars($roomId); ?>">
       <div class="form-group">
         <label for="date">Date</label>
         <input type="date" id="date" name="date" required />
@@ -120,33 +117,6 @@
       <div class="message" id="responseMessage"></div>
     </form>
   </div>
-  
-
-<script>
-  function submitBooking(event) {
-    event.preventDefault(); 
-
-    const form = document.getElementById('bookingForm');
-    const formData = new FormData(form);
-    const responseMessage = document.getElementById('responseMessage');
-
-    fetch('submit_booking.php', {
-      method: 'POST',
-      body: formData
-    })
-    .then(res => res.text())
-    .then(data => {
-      responseMessage.textContent = data;
-      responseMessage.className = 'message success';
-      form.reset();
-    })
-    .catch(err => {
-      console.error(err);
-      responseMessage.textContent = 'Failed to submit booking. Please try again.';
-      responseMessage.className = 'message error';
-    });
-  }
-</script>
 
 </body>
 </html>
