--- a/login.html
+++ b/login.html
@@ -80,7 +80,7 @@
 
 <div class="login-container">
   <h2>Login</h2>
-  <form method="POST" action="login.php" id="loginForm"> <!-- login.php -->
+  <form method="POST" action="loginverify.php" id="loginForm"> <!-- login.php -->
     <div class="form-group">
       <label for="username">Username</label>
       <input type="text" name="username" required>
