--- a/booking.html
+++ b/booking.html
@@ -94,8 +94,12 @@
 <body>
   <div class="booking-container">
     <h1>Book a Room</h1>
-    <form id="bookingForm" method="POST" action="submit-booking.php"> <!-- submit-booking.php -->
+    <form id="bookingForm" method="post" action="submit-booking.php"> <!-- submit-booking.php -->
       <input type="hidden" name="room_id" value="<?php echo htmlspecialchars($roomId); ?>">
+      <div class="form-group">
+        <label for="room">Room</label>
+        <input type="text" id="room" name="room" required>
+      </div>
       <div class="form-group">
         <label for="date">Date</label>
         <input type="date" id="date" name="date" required />
@@ -113,7 +117,7 @@
         <textarea id="purpose" name="purpose" rows="3" required></textarea>
       </div>
 
-      <button type="submit" class="submit-btn">Submit Booking</button>
+      <input type="submit" class="submit-btn" value="Submit Booking" name="submit">
       <div class="message" id="responseMessage"></div>
     </form>
   </div>
