--- a/booking.html
+++ b/booking.html
@@ -99,6 +99,18 @@
       <div class="form-group">
         <label for="room">Room</label>
         <input type="text" id="room" name="room" required>
+
+        <script>
+          const searchParams = new URLSearchParams(window.location.search);
+          const previousRoomID = searchParams.get('roomId');
+
+          console.log(previousRoomID);
+
+          if(previousRoomID) {
+            document.getElementById('room').value = previousRoomID;
+          }
+        </script>
+
       </div>
       <div class="form-group">
         <label for="date">Date</label>
